# tigrcorn

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_REPOSITORY_STATE.md  CURRENT_REPOSITORY_STATE_DEPENDENCY_DECLARATION_RECONCILIATION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_DOCUMENTATION_TRUTH_NORMALIZATION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE0_PUBLIC_CLI_CONTRACT_DRIFT_RECONCILIATION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE1_BOUNDARY_AND_NON_GOALS_NORMALIZATION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE1_SURFACE_PARITY_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE2_CORE_HTTP_ENTITY_SEMANTICS_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE2_RFC_BOUNDARY_FORMALIZATION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE3_TRANSPORT_CORE_STRICTNESS_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE4_ADVANCED_PROTOCOL_DELIVERY_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE4_H2_OPERATOR_SURFACE_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE4_RFC_BOUNDARY_FORMALIZATION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE5_PHASE6_PHASE7_TLS_LIFECYCLE_AND_FLAG_TRUTH_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE8_CERTIFICATION_REFRESH_AND_PROMOTION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PHASE9J_RELEASED_0_3_8_REPAIR_AND_0_3_9_PROMOTION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_PROMOTION_ARTIFACT_RECONCILIATION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_RESPONSE_PIPELINE_STREAMING_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_STATIC_DELIVERY_PRODUCTIONIZATION_CHECKPOINT.md  CURRENT_REPOSITORY_STATE_TRIO_RUNTIME_SURFACE_RECONCILIATION_CHECKPOINT.md  DEFAULT_AUDIT.json  DEFAULT_AUDIT.md  DELIVERY_NOTES_AIOQUIC_ADAPTER_PREFLIGHT.md  DELIVERY_NOTES_CERTIFICATION_ENVIRONMENT_FREEZE.md  DELIVERY_NOTES_CERTIFICATION_UPDATE.md  DELIVERY_NOTES_HTTP_INTEGRITY_CACHING_SIGNATURES_UPDATE.md  DELIVERY_NOTES_PHASE8_STRICT_PROMOTION_CHECKPOINT.md  DELIVERY_NOTES_PHASE9A_PROMOTION_CONTRACT_FREEZE.md  DELIVERY_NOTES_PHASE9D2_TRAILER_FIELDS_INDEPENDENT_CLOSURE.md  DELIVERY_NOTES_PHASE9F1_TLS_CIPHER_POLICY_CLOSURE.md  DELIVERY_NOTES_PHASE9F2_LOGGING_EXPORTER_CLOSURE.md  DELIVERY_NOTES_PHASE9I_RELEASE_ASSEMBLY_AND_CERTIFIABLE_CHECKPOINT.md  DELIVERY_NOTES_PHASE9_RELEASE_PROMOTION_AND_VERSION_UPDATE.md  DELIVERY_NOTES_PYPROJECT_DEV_DEPENDENCY_UPDATE.md  DELIVERY_NOTES_RFC_APPLICABILITY_COMPETITOR_SUPPORT_UPDATE.md  DELIVERY_NOTES_RFC_APPLICABILITY_COMPETITOR_UPDATE.md  (+17 more)
.artifacts/: ssot-spec-2009-structured-fields-strict-validation.md
.ssot/: MUT.json  README.md  registry.json
PROFILE_DEFAULTS/: README.md  default.json  default.md  static-origin.json  static-origin.md  strict-h1-origin.json  strict-h1-origin.md  strict-h2-origin.json  strict-h2-origin.md  strict-h3-edge.json  strict-h3-edge.md  strict-mtls-origin.json  strict-mtls-origin.md
benchmarks/: MUT.json  __init__.py  common.py  drivers_http.py  drivers_operator.py  drivers_semantic.py  drivers_tls.py  drivers_websocket.py  registry.py
docs/: LIFECYCLE_AND_EMBEDDED_SERVER.md  MUT.json  README.md
examples/: MUT.json  PHASE4_PROTOCOL_PAIRING.md  README.md
perf/: test_correctness_under_load.py  test_driver_latency.py  test_matrix_integration.py
profiles/: MUT.json  README.md  default.profile.json  static-origin.profile.json  strict-h1-origin.profile.json  strict-h2-origin.profile.json  strict-h3-edge.profile.json  strict-mtls-origin.profile.json
src/: MUT.json
tests/: MUT.json  contract_closure_assertions.py  test_additional_remaining_work.py  test_additional_remaining_work_pytest.py  test_aioquic_adapter_helpers.py  test_aioquic_adapter_preflight.py  test_app_interface_cli_flag.py  test_app_interface_config_toml.py  test_app_interface_detection_precedence.py  test_app_interface_env_var.py  test_app_interface_fail_closed_ambiguity.py  test_app_interface_public_api.py  test_app_loader.py  test_app_loader_pytest.py  test_asgi2_compat_exclusion.py  test_asgi3_endpoint_metadata_extension.py  test_asgi3_hot_path_isolation.py  test_asgi3_security_metadata_extension.py  test_asgi3_stream_datagram_extension.py  test_asgi3_transport_identity_extension.py  test_category_boundaries.py  test_certification_environment_freeze.py  test_certification_explicit_surfaces_boundary.py  test_certification_policy_alignment.py  test_certification_policy_alignment_pytest.py  test_cli_and_asgi3.py  test_cli_and_asgi3_pytest.py  test_compat_dispatch_selection.py  test_compat_http_boundary.py  test_compression_additional.py  test_compression_additional_pytest.py  test_config_matrix.py  test_config_matrix_pytest.py  test_conformance_corpus.py  test_conformance_corpus_pytest.py  test_connect_rfc9110.py  test_connect_rfc9110_pytest.py  test_connect_tunnel_h2_h3.py  test_connect_tunnel_h2_h3_pytest.py  test_content_coding_policy_local.py  (+293 more)
tools/: MUT.json  __init__.py  build_intermediary_proxy_corpus.py  build_phase3_transport_core_checkpoint.py  build_phase4_advanced_protocol_delivery_checkpoint.py  create_minimum_certified_flow_control_bundle.py  create_minimum_certified_intermediary_proxy_corpus.py  create_phase7_release_candidate.py  create_phase8_promotion_target_status.py  create_phase9_release_promotion_checkpoint.py  create_phase9b_harness_foundation.py  create_phase9c_rfc7692_checkpoint.py  create_phase9d1_connect_relay_checkpoint.py  create_phase9d2_trailer_fields_checkpoint.py  govchk.py  (+19 more)
(+2689 files in other folders)
