[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tigrcorn"
version = "0.3.9"
description = "ASGI3-compatible transport server with a transport-agnostic core and stdlib-only implementation."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Jacob Stewart", email = "jacob@swarmauri.com"}
]
keywords = ["asgi", "server", "http", "websocket", "http2", "http3", "quic", "uvicorn", "hypercorn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tigrcorn-core==0.3.9",
    "tigrcorn-config==0.3.9",
    "tigrcorn-asgi==0.3.9",
    "tigrcorn-contract==0.3.9",
    "tigrcorn-transports==0.3.9",
    "tigrcorn-protocols==0.3.9",
    "tigrcorn-http==0.3.9",
    "tigrcorn-security==0.3.9",
    "tigrcorn-runtime==0.3.9",
    "tigrcorn-static==0.3.9",
    "tigrcorn-observability==0.3.9",
    "tigrcorn-compat==0.3.9",
    "tigrcorn-certification==0.3.9",
    "tigr-asgi-contract>=0.3.2",
]

[project.optional-dependencies]
tls-x509 = [
  "cryptography>=46.0.0",
]
certification = [
  "cryptography>=46.0.0",
  "aioquic>=1.3.0",
  "h2>=4.1.0",
  "websockets>=12.0",
  "wsproto>=1.3.0",
]
config-yaml = [
  "PyYAML>=6.0",
]
compression = [
  "brotli>=1.1.0",
]
runtime-uvloop = [
  "uvloop>=0.19.0; platform_system != 'Windows'",
]
runtime-trio = [
  "trio>=0.25.0",
]
full-featured = [
  "cryptography>=46.0.0",
  "PyYAML>=6.0",
  "brotli>=1.1.0",
  "uvloop>=0.19.0; platform_system != 'Windows'",
]
dev = [
  "cryptography>=46.0.0",
  "pytest>=8.0",
  "ssot-registry>=0.1.0",
  "aioquic>=1.3.0",
  "h2>=4.1.0",
  "websockets>=12.0",
  "wsproto>=1.3.0",
  "PyYAML>=6.0",
  "brotli>=1.1.0",
  "uvloop>=0.19.0; platform_system != 'Windows'",
]

[project.scripts]
tigrcorn = "tigrcorn.cli:main"
tigrcorn-interop = "tigrcorn.compat.interop_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.package-data]
tigrcorn = ["py.typed", "profiles/*.profile.json", "profiles/README.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["pkgs/*"]

[tool.uv.sources]
tigrcorn-core = { workspace = true }
tigrcorn-config = { workspace = true }
tigrcorn-asgi = { workspace = true }
tigrcorn-contract = { workspace = true }
tigrcorn-transports = { workspace = true }
tigrcorn-protocols = { workspace = true }
tigrcorn-http = { workspace = true }
tigrcorn-security = { workspace = true }
tigrcorn-runtime = { workspace = true }
tigrcorn-static = { workspace = true }
tigrcorn-observability = { workspace = true }
tigrcorn-compat = { workspace = true }
tigrcorn-certification = { workspace = true }

[dependency-groups]
dev = [
    "ssot-registry>=0.2.13",
]
